--- a/microservices/docker-compose.yml
+++ b/microservices/docker-compose.yml
@@ -1,13 +1,13 @@
 services: 
       counterdeploy:
           build: ./counter/
-          port: 
+          ports: 
             - '5000:80'
           network_mode: 
               bridge
 
       puppy: 
           build: ./puppy/
-          port:
-            - '81:80'
+          ports:
+            - '82:80'
           network_mode: bridge
