--- a/microservices/docker-compose.yml
+++ b/microservices/docker-compose.yml
@@ -10,4 +10,5 @@ services:
           build: ./puppy/
           ports:
             - '82:80'
-          network_mode: bridge
+          network_mode: 
+              bridge
