--- a/podsvc.yml
+++ b/podsvc.yml
@@ -7,7 +7,7 @@ metadata:  #like a tag
 spec:
  containers:
     - name: mypod-cont
-      image: nginx:latest
+      image: akashlandge/puppy:latest
       resources: 
           requests:
             cpu: "50m"
