--- a/podsvc.yml
+++ b/podsvc.yml
@@ -7,11 +7,7 @@ metadata:  #like a tag
 spec:
  containers:
     - name: mypod-cont
-      image: https://docker.com/repository/docker/akashlandge/puppy:latest
-      resources: 
-          requests:
-            cpu: "50m"
-            memory: "90Mi"        
+      image: akashlandge/todo
       ports:  
         - name: http
           containerPort: 80
@@ -29,4 +25,4 @@ spec:
     - protocol: TCP
       port: 80
       targetPort: 80
-      name: nginx
+      name: todo
