--- a/menifest.file/ingress/ingressrule.yml
+++ b/menifest.file/ingress/ingressrule.yml
@@ -7,7 +7,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-  - host: a5ff7a28718f1475a860473ad6cb800a-1163411906.ap-southeast-1.elb.amazonaws.com
+  - host: a451c4f4073824b93b2f7f162a957702-1825841154.us-east-1.elb.amazonaws.com
     http:
       paths:
         
