--- a/menifest.file/ingress/nginx/deploymenthpa.yml
+++ b/menifest.file/ingress/nginx/deploymenthpa.yml
@@ -18,7 +18,7 @@ spec:
         spec: 
           containers:
              - name: frontendapp
-               image: nginx:latest
+               image: akashlandge/todo:latest
                ports:
                   - containerPort: 80
                     protocol: TCP
