--- a/menifest.file/ingress/tomcat/deploymenthpa.yml
+++ b/menifest.file/ingress/tomcat/deploymenthpa.yml
@@ -18,7 +18,7 @@ spec:
         spec: 
           containers:
              - name: backendapp
-               image: tomcat:latest
+               image: akashlandge/student:latest
                ports:
                   - containerPort: 8080
                     protocol: TCP
